cath_distances/stderr
  File "../calculate_cath_distances.py", line 41
    if code != 255
                 ^
SyntaxError: invalid syntax
